--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -33,6 +33,7 @@
             <li class="list-item">three</li>
             <li class="list-item">three</li>
             <li class="list-item">three</li>
+            <li class="list-item">Ani</li>
         </ul>
         <script>
             
